--- a/now.json
+++ b/now.json
@@ -2,5 +2,5 @@
   "name": "career-journey-framework",
   "alias": "career-journey-framework",
   "type": "static",
-  "public": true,
+  "public": true
 }
