Need export to be here

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint --ext .js ."
+    "dev": "next",
+    "export": "next export",
+    "lint": "eslint --ext .js .",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
