--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "MIT",
   "homepage": "https://github.com/goldenshun/career-journey-framework#readme",
   "dependencies": {
+    "@mdx-js/mdx": "0.15.7",
+    "@zeit/next-mdx": "1.2.0",
     "next": "7.0.2",
     "react": "16.5.2",
     "react-dom": "16.5.2"
