New name and alias

--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
-  "name": "career-journey-framework",
-  "alias": "career-journey-framework",
+  "name": "career-journeys",
+  "alias": "career-journeys",
   "type": "static",
   "public": true
 }
