--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
+    "now-build": "build",
     "dev": "next",
     "export": "next export",
     "lint": "eslint --ext .js .",
